syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/x/gitopia/types";

import "gogoproto/gogo.proto";
import "gitopia/request.proto";

message User {
  string creator = 1;
  uint64 id = 2;
  string name = 3;
  string username = 4; 
  string usernameGithub = 5; 
  string avatarUrl = 6; 
  repeated string followers = 7; 
  repeated string following = 8; 
  repeated UserRepository repositories = 9;
  repeated UserOrganization organizations = 10; 
  repeated uint64 starred_repos = 11; 
  string subscriptions = 12; 
  string email = 13; 
  string bio = 14; 
  int64 createdAt = 15; 
  int64 updatedAt = 16; 
  Requests requests = 17;
}

message UserRepository {
  string name = 1;
  uint64 id = 2;
}

message UserOrganization {
  string name = 1;
  string id = 2;
}
